--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www",
+    "test": "mocha --recursive",
+    "dev": "SET DEBUG=api-epic-cloud-of-links:* & nodemon ./bin/www"
   },
   "keywords": [],
   "author": "",
